# StrangeReturns-CMake

./: .gitignore  CMakeLists.txt  README.md
Source/: BitModulation.h  Constants.h  DCBlocker.h  DelayProcessor.cpp  DelayProcessor.h  EditorComponents.h  NoiseGenerator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorUtils.h  VASVFilter.h
